# BLE_HID_DEVICE

./: README.md
esp32_ble_hid/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
esp32_ble_hid/main/: CMakeLists.txt  main.c
esp32_ble_hid/main/src/: adxl345.c  adxl345.h  ble_db_table.c  ble_hid.c  ble_hid.h  hid_info.h
